--- a/views/UserAuctionManagment/auctions.html
+++ b/views/UserAuctionManagment/auctions.html
@@ -3,10 +3,9 @@
 {% block main %}
 
 
-<div>
+<div class="listAuctions">
 
     <div class="options">
-
         <a href="{{ BASE }}user/auctions/add">Add new auction</a>
     </div>
 
