--- a/views/Auction/show.html
+++ b/views/Auction/show.html
@@ -1,16 +1,62 @@
 {% extends "_global/index.html" %}
 
 {% block main %}
-
-<a href="#" onclick="addBookmarks({{auction.auction_id}});">Add to bookmark</a>
-
+<a href="#" onclick="addBookmark({{ auction.auction_id }});">Add to bookmark</a>
 <h1>{{ auction.title|escape }}</h1>
-<p>{{ auction.description}}</p>
-<p>Trenutna cena:{{ lastOfferPrice}} EUR</p>
-<p>Datum pocetka:{{ auction.starts_at|date('j. n. Y')}}</p>
-<p>Datum kraja:{{ auction.ends_at|date('j. n. Y')}}</p>
+<p>{{ auction.description }}</p>
+<p>Current price: <span id="current_auction_price">{{ lastOfferPrice }}</span> EUR
+    {% if showBidForm == true %}
+<div class="form-group">
+    <input type="hidden" id="auction_id" value="{{ auction.auction_id }}">
+    <input type="number" min="{{ lastOfferPrice + 2.0 }}" step="0.01" value="{{ lastOfferPrice + 2.0 }}"
+        id="offer_price" class="form-control">
+    <button type="button" onclick="actionBid();" class="btn btn-primary">
+        <i class="fa fa-money"></i> Licitiraj
+    </button>
+</div>
+{% endif %}
+</p>
+<p>Beginning date: {{ auction.starts_at|date('j. n. Y.') }}</p>
+<p>Expiration date: {{ auction.ends_at|date('j. n. Y.') }}</p>
+<div id="message"></div>
+
+<script>
+    function actionBid() {
+        const auctionId = document.querySelector('#auction_id').value;
+        const offerPrice = document.querySelector('#offer_price').value;
+
+        addOffer(auctionId, offerPrice, updatePriceOnPage, showErrorMessage);
+    }
+
+    function updatePriceOnPage(newPrice) {
+        document.querySelector('#current_auction_price').innerHTML = newPrice;
+        showMessage('New offer successfully added!');
+    }
+
+    function showErrorMessage(errorCode) {
+        switch (errorCode) {
+            case -10001: showMessage('You are loged out!'); break;
+            case -10002: showMessage('You cannot bid on your auction!'); break;
+            case -20001: showMessage('There is no auction!'); break;
+            case -20002: showMessage('The auction is not active!'); break;
+            case -20003: showMessage('The auction is over!'); break;
+            case -20004: showMessage('The auction has not started!'); break;
+            case -20005: showMessage('The price is not correct!'); break;
+            case -20006: showMessage('Error adding bid!'); break;
+            default: showMessage('Unknown error!'); break;
+        }
+    }
+
+    function showMessage(message) {
+        document.querySelector('#message').innerHTML = message;
+
+        setTimeout(function () {
+            document.querySelector('#message').innerHTML = '';
+        }, 5000);
+    }
+</script>
 {% endblock %}
 
 {% block naslov %}
-{{category.name|escape}}
+{{ auction.title|escape }}
 {% endblock %}
