--- a/views/Main/home.html
+++ b/views/Main/home.html
@@ -2,13 +2,14 @@
 
 {% block main %}
 {% apply spaceless %}
-<p>{{ podatak }}</p>
-<div class="categories">
+
+<div class="categories" id="box">
     {% for category in categories %}
     <a href="{{ BASE }}category/{{ category.category_id }}" class="category">
         {{ category.name|escape }}
     </a>
     {% endfor %}
+
 </div>
 {% endapply %}
 {% endblock %}
