--- a/views/Main/postRegister.html
+++ b/views/Main/postRegister.html
@@ -3,6 +3,6 @@
 {% block main %}
 <div>
     <p>{{ message }}</p>
-    <p>Click <a href="{{ BASE }}user/register">here</a> to go back.</p>
+    <p>Click <a href="{{ BASE }}user/login">here</a> to go back.</p>
 </div>
 {% endblock %}
