--- a/views/UserAuctionManagment/getEdit.html
+++ b/views/UserAuctionManagment/getEdit.html
@@ -6,10 +6,10 @@
         <a href="{{ BASE }}user/auctions">List my auctions</a>
     </div>
 
-    <form class="auctions-form" method="POST" enctype="multipart/form-data">
+    <form class="auctions-form" method="POST" enctype="multipart/form-data" onsubmit="return validateForm();">
         <div class="form-group">
             <label for="title">Title: </label>
-            <input type="text" id="title" name="title" required class="form-control" value="{{auction.title}}">
+            <input type="text" id="title" name="title" required class="form-control" value="{{ auction.title }}">
         </div>
 
         <div class="form-group">
@@ -18,30 +18,30 @@
                 rows="10">{{ auction.description }}</textarea>
         </div>
 
-        <div class=" form-group">
+        <div class="form-group">
             <label for="starting_price">Starting price: </label>
             <input type="number" id="starting_price" name="starting_price" required class="form-control" min="0.01"
-                step="0.01" value="{{auction.starting_price}}">
+                step="0.01" value="{{ auction.starting_price }}">
         </div>
 
         <div class="form-group">
             <label for="starts_at">Starts at: </label>
             <input type="datetime-local" id="starts_at" name="starts_at" required class="form-control"
-                value="{{auction.starts_at}}">
+                value="{{ auction.starts_at }}">
         </div>
 
         <div class="form-group">
             <label for="ends_at">Ends at: </label>
             <input type="datetime-local" id="ends_at" name="ends_at" required class="form-control"
-                value="{{auction.ends_at}}">
+                value="{{ auction.ends_at }}">
         </div>
 
         <div class="form-group">
             <label for="category_id">Auction category: </label>
             <select class="form-control" name="category_id" id="category_id">
                 {% for category in categories %}
-                <option value="{{ category.category_id }}" {% if auction.category_id==category.category_id
-                    %}selected{%endif%}>
+                <option value="{{ category.category_id }}" {% if auction.category_id==category.category_id %}selected{%
+                    endif %}>
                     {{ category.name }}
                 </option>
                 {% endfor %}
@@ -50,9 +50,8 @@
 
         <div class="form-group">
             <label for="image">Image: </label>
-            <input type="file" id="image" name="image" class="form-control" accept="image/jpeg">
+            <input type="file" id="image" name="image" class="form-control" accept="image/jpeg, image/png">
         </div>
-
 
         <div class="form-group">
             <button type="submit" class="btn btn-primary">
@@ -60,6 +59,33 @@
                 Edit auction
             </button>
         </div>
+
+        <div class="alert alert-warning d-none" id="error-message"></div>
     </form>
+
+    <script>
+        function validateForm() {
+            let status = true;
+
+            document.querySelector('#error-message').classList.add('d-none');
+            document.querySelector('#error-message').innerHTML = '';
+
+            const title = document.querySelector('#title').value;
+            if (!title.match(/.*[^\s]{3,}.*/)) {
+                document.querySelector('#error-message').innerHTML += 'The title must contain at least three visible characters...<br>';
+                document.querySelector('#error-message').classList.remove('d-none');
+                status = false;
+            }
+
+            const description = document.querySelector('#description').value;
+            if (!description.match(/.*[^\s]{7,}.*/)) {
+                document.querySelector('#error-message').innerHTML += 'The description must contain at least seven visible characters...<br>';
+                document.querySelector('#error-message').classList.remove('d-none');
+                status = false;
+            }
+
+            return status;
+        }
+    </script>
 </div>
 {% endblock %}
