--- a/views/UserCategoryManagment/getAdd.html
+++ b/views/UserCategoryManagment/getAdd.html
@@ -7,13 +7,13 @@
     </div>
 
     <form class="category-form" method="POST">
-        <div>
+        <div class="form-group">
             <label for="name">Name: </label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" class="form-control" required>
         </div>
 
-        <div>
-            <button type="submit">
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">
                 Add category
             </button>
         </div>
